* Mon Jun 05 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.3.2-0
- Ensure legacy auth.conf is backed up before removing it. This is a
  follow up to SIMP-3049 based on feedback to SIMP-3196.

* Mon May 22 2017 Kendall Moore <kendall.moore@onyxpoint.com> 7.3.2-0
- Added manifest to manage simp-specific puppet master auth requirements
- Disabled puppetserver setting to enable legacy auth.conf by default
- Remove legacy auth.conf placed by the `puppet-agent` package

* Fri May 19 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.3.1-0
- Removed deprecated `audit` metaparameter

* Fri Apr 28 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.1-0
- Use global catalyst to configure package_ensure.
- Add 'puppet_enterprise::profile::database' class definition to the pe_classlist
  and move the postgresql components under that class.
- Add 'puppet_enterprise::profile::primary_master_replica' class definition
  to the class list to work around an issue in production

* Tue Apr 04 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.0-0
- Add 'package_ensure' to allow users to specify that they want to use 'latest' or 'installed'

* Wed Mar 08 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.2.0-0
- Updated puppetagent_cron:
-  Added `break_puppet_lock` param so users can clearly specify when they wish
   to forcibly enable the puppet agent.
-  Added `max_disable_time param`. Updated logic to determine when to
   forcibly enable a puppet agent, and moved logic into cron.pp for
   user-friendliness.
-  Set maxruntime default of 4 hours

* Wed Mar 01 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.1-0
- The previous audit rules relied on the puppet user existing, but in
  newer versions of puppet, the puppet user only exists on the
  puppetserver. This commit only puts auditing on the puppetserver.

* Mon Feb 20 2017 Jeanne Greuich <jeanne.greulich@onyxpoint.com> - 7.1.0-0
- Fix typos in the puppetagent cron script
